Fix header spacing

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -59,7 +59,7 @@ time, mark, audio, video {
 .col {
 	display: block;
 	float:left;
-	margin: 1% 0 1% 1%;
+	margin: 0 0 0 1%;
 }
 .col:first-child { margin-left: 0; }
 
@@ -117,11 +117,21 @@ time, mark, audio, video {
   	width: 7.416%;
 }
 
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  top: 0;
+  background-color: white;
+  height: 6rem;
+  border-bottom: 1px solid $accent;
+}
+
 h1 { 
   a {
     text-decoration: none;
     img {
-      max-width: 15rem;
+      width: 13rem;
       padding: 1rem 0 0 1rem;
     }
   }
@@ -204,7 +214,7 @@ nav {
   background: linear-gradient($overlay, $overlay), url('../images/index-what-600.jpg');
   background-size: cover;
   background-position: center;
-  margin: 0;
+  margin: 6rem 0 0;
   @include plain-links;
   p {
     font-family: $display;
